# COMMLINK

./: .clang-format  .clang-tidy  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GUI_HTTP_TEST.md  HTTP_IMPLEMENTATION.md  INTEGRATION_TEST.md  LICENSE  MIGRATION_GUIDE.md  README.md  SETUP_NEW_REPO.md  readme.txt  setup-new-repo.sh  test_http.sh  test_server.py
.cache/clangd/index/: connectionstats.cpp.D7DBF773B6D8EC60.idx  connectionstats.h.291EDA1527783BF1.idx  dataformat.cpp.CC18F57FECEE147C.idx  dataformat.h.F71A2A5B41E11581.idx  exportmanager.cpp.A200697A34354391.idx  exportmanager.h.4E9751E92BEB407F.idx  filemanager.cpp.6B749E4528BE9DAE.idx  filemanager.h.A7306DCA40DBE520.idx  gui.cpp.4B80A8F015772A9A.idx  gui.h.32E70ADA24748750.idx  historytab.cpp.EC84E92C8B474418.idx  historytab.h.2846A586CBC76A9D.idx  logger.cpp.5B696066EDA8A8DE.idx  logger.h.1EC99DA2260F8FA3.idx  main.cpp.B0340ED45FBA2A8C.idx  messagehistorymanager.cpp.299C37CEFD1052C9.idx  messagehistorymanager.h.2A387425474E6458.idx  receiver.cpp.D1AAC000626F7DCF.idx  receiver.h.D17C072CA7F96A49.idx  receiverthread.cpp.1F0979116FC32027.idx  receiverthread.h.8D17B41931031B71.idx  sender.cpp.D80DFD51754AD2D4.idx  sender.h.D206CECBF67C82C4.idx  senderthread.cpp.1468996CF82859E7.idx  senderthread.h.CFFF22424F1B00D6.idx  thememanager.cpp.BDE10CC8E5642AB0.idx  thememanager.h.A7688B389AD2BBAE.idx  websocketclient.cpp.0AE8D15466587C3B.idx  websocketclient.h.E39863519F1A78A7.idx
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
CommLink/: .gitignore  CMakeLists.txt  CommLink.qrc  README.md
CommLink/docs/: Beginners_Complete_Guide.md  CPP_Programming_Concepts.md  GUI_Implementation_Guide.md  Project_Overview.md  Qt_Framework_Features.md  Source_Code_Analysis.md
CommLink/include/: dataformat.h  exportmanager.h  filemanager.h  gui.h  logger.h  messagehistorymanager.h  receiver.h  senderthread.h  thememanager.h
CommLink/src/: connectionstats.cpp  dataformat.cpp  exportmanager.cpp  filemanager.cpp  gui.cpp  historytab.cpp  logger.cpp  main.cpp  messagehistorymanager.cpp  receiver.cpp  receiverthread.cpp  sender.cpp  senderthread.cpp  thememanager.cpp
CommLink/test_build/: CMakeCache.txt  Makefile  cmake_install.cmake
JsonSender/: CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp  robustness_test.sh  sender.cpp  sender.h  test_CMakeLists.txt  test_app.sh  test_invalid.json  test_valid.json
JsonSender/docs/: Beginners_Complete_Guide.md  CPP_Programming_Concepts.md  GUI_Implementation_Guide.md  Project_Overview.md  Qt_Framework_Features.md  Source_Code_Analysis.md
JsonSender/include/: gui.h  receiverthread.h  sender.h
JsonSender/src/: gui.cpp  main.cpp  receiver.cpp  receiverthread.cpp  sender.cpp  test_network.cpp
JsonSender/test_build/: CMakeCache.txt  Makefile
JsonSender/tests/: test_basic.cpp
cmake/: CompilerWarnings.cmake
docs/: ARCHITECTURE.md  Beginners_Complete_Guide.md  CODE_FLOW.md  CODE_FLOW_QUICK_REFERENCE.md  CPP_Programming_Concepts.md  DOXYGEN.md  HTTP_TESTING.md  Keyboard_Shortcuts_Reference.md  Performance_and_Limitations.md  Project_Overview.md  Qt_Framework_Features.md  README.md  REFACTORING_SUMMARY.md  architecture-simple.md  architecture.md  developer-guide.md  faq.md  http-protocol.md  learning-guide.md  mainpage.dox  quick-start.md  user-guide-simple.md  user-guide.md
docs/doxygen/html/: ARCHITECTURE_8md.html  README_8md.html  annotated.html  annotated_dup.js  classCommLinkGUI-members.html  classCommLinkGUI.html  classCommLinkGUI.js  classCommLinkGUI__coll__graph.md5  classCommLinkGUI__inherit__graph.map  classConnectionPanel-members.html  classConnectionPanel.html  classConnectionPanel.js  classConnectionPanel__coll__graph.md5  classConnectionPanel__inherit__graph.map  classDataMessage-members.html  classDataMessage.html  classDataMessage.js  classDisplayPanel-members.html  classDisplayPanel.html  classDisplayPanel.js  classDisplayPanel__coll__graph.md5  classDisplayPanel__inherit__graph.map  classExportManager-members.html  classExportManager.html  classExportManager.js  classFileManager-members.html  classFileManager.html  classFileManager.js  classHistoryTab-members.html  classHistoryTab.html  classHistoryTab.js  classHistoryTab__coll__graph.map  classHistoryTab__coll__graph.md5  classHttpClient-members.html  classHttpClient.html  classHttpClient.js  classHttpClient__coll__graph.md5  classHttpClient__inherit__graph.map  classHttpServer-members.html  classHttpServer.html  (+409 more)
docs/doxygen/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  (+70 more)
include/commlink/: http_client.h
include/commlink/core/: dataformat.h  filemanager.h  messagehistorymanager.h
include/commlink/network/: connectionstats.h  httpclient.h  httpserver.h  receiver.h  receiverthread.h  sender.h  senderthread.h  tcpclient.h  tcpserver.h  udpclient.h  udpserver.h  websocketclient.h  websocketserver.h
include/commlink/ui/: connectionpanel.h  displaypanel.h  gui.h  historytab.h  mainwindow.h  messagepanel.h  serverpanel.h  statuspanel.h
resources/: resources.qrc
resources/logo/: README.md
scripts/: build.sh  format.sh  install-deps.sh  kill-port.sh  setup-linux.sh  setup-windows.ps1
src/: CMakeLists.txt  http_client.cpp  main.cpp
src/core/: dataformat.cpp  exportmanager.cpp  filemanager.cpp  logger.cpp  messagehistorymanager.cpp
src/network/: connectionstats.cpp  httpclient.cpp  httpserver.cpp  receiver.cpp  receiverthread.cpp  sender.cpp  senderthread.cpp  tcpclient.cpp  tcpserver.cpp  udpclient.cpp  udpserver.cpp  websocketclient.cpp  websocketserver.cpp
src/ui/: connectionpanel.cpp  displaypanel.cpp  gui.cpp  historytab.cpp  mainwindow.cpp  messagepanel.cpp  serverpanel.cpp  statuspanel.cpp  thememanager.cpp
tests/: CMakeLists.txt
tests/unit/: test_dataformat.cpp  test_filemanager.cpp
